# aphla

./: .gitignore  .hgignore  ChangeLog  MANIFEST.in  README  TODO.txt  ToDo.txt  pyproject.toml  setup.py  stdeb.cfg
aphla/: __init__.py  apdata.py  aptools.py  bba.py  catools.py  chanfinder.py  corrplot.pyw  curve_fitting.py  defaults.py  element.py  epicsdatamonitor.py  gaussfitter.py  hlalib.py  lattice.py  libinit.py  measorm.py  meastwiss.py  nsls2.py  nsls2br.py  nsls2id.py  nsls2sr.py  nsls2v2sr.py  orm.py  ormdata.py  resource.py  respmat.py  snapshot.py  tbtanal.py  unitconv.py
conf/: __init__.py  appLauncherHierarchy.xml  app_launcher_hierarchy.xml  launcher_hierarchy.xml  nsls2.csv  nsls2_sr_bba.json  tw_tls_cfs.csv  us_nsls2.db  us_nsls2_cfs.csv  us_nsls2_vsr_cfs.csv  us_nsls2v1.db  us_nsls2v1_cfs.csv  us_nsls2v2.db  us_nsls2v3bsrline.sqlite
db_update/: FCORmapforYoshi.csv  nsls2_br_elems_pvs_mvs.json  nsls2_btd_elems_pvs_mvs.json  nsls2_bts_elems_pvs_mvs.json  nsls2_ltb_elems_pvs_mvs.json  nsls2_ltd1_elems_pvs_mvs.json  nsls2_ltd2_elems_pvs_mvs.json  nsls2_sr_elems_pvs_mvs.json  update_apv1_db.py  update_apv2_db.py
doc/: Makefile  Makefile.dead  aplibgui.rst  appendix.rst  channelfinder.rst  commands.rst  commands.txt  commissioning.rst  conf.py  contents.rst  faq.rst  history.rst  hla.texi  hla_api.texi  hla_meeting_2013_0207.rst  hla_ug.tex  hlasummary.txt  index.rst  installation.rst  intro.rst  libref.rst  librefcatools.rst  librefhlacore.rst  libreflattice.rst  make.bat  nsls2req.rst  pyap-lib.rst  quickstart.rst  ref.rst  requirement.rst  todo.rst  tutorial.rst  unitconv.rst  userguide.rst
example/: ID_feed_forward_table_creation.ipynb  doc_tutorial.ipynb  ex01.py  ex02.ipynb  ex02.py  ex03.py  ex_localbump.py  ex_orbit.py  example.py  measurement.py  nsls2id.py  plotter_sample_coarse_history.hdf5  test_nsls2id.ipynb
facility_configs/: nsls2.yaml
gui/: GUI_App_Launcher.pyw  GUI_Current_Monitor.py  GUI_Lattice_Tuner.py  GUI_Orbit_Viewer.py  Makefile  apbba.py  aphlasconfdlg.py  aplattuner.py  aplauncher.py  app_launcher_hierarchy.xml  applotter.py  channelexplorer.py  currentmonitor.py  elemproperty.py  elemselector.py  elemtuner.py  gui_icons.py  gui_resources.py  hlaGui.py  hlaPlot.py  lattuner.py  lattunner.py  orbit.py  orbitconfdlg.py  orbitcorrdlg.py  orbitdata.py  orbitplot.py  orbitviewer.py  qrc_resources.py  toolbar_icons.py
lib/: __init__.py  aptools.py  bba.py  catools.py  chanfinder.py  current.py  curve_fitting.py  element.py  gaussfitter.py  hlalib.py  lattice.py  machines.py  measorm.py  meastwiss.py  orbit.py  orm.py  ormdata.py  twiss.py
mml/: nsls2cf2mml.py  nsls2v1ltd1.m.template  nsls2v2sr.m.template  v1ltd1init.m.template  v2srinit.m.template  v2srinit_ao_bpm.m.template  v2srinit_ao_hvcm.m.template  v2srinit_ao_q.m.template  v2srinit_ao_screen.m.template
reference/: Commissioning.ppt  NSLS-II_Commissioning_version.doc  NSLS-II_Commissioning_version_jan10b.doc  preliminaryDesignDiagnosticsControls06182010.doc
script/: __init__.py  apbba.py  apbbaconfdlg.py  elementpickdlg.py  gui_resources.qrc  orbit.py  orbit_resources.qrc  orbitconfdlg.py  orbitcorrdlg.py  orbitplot.py
seasail/: seasail.py
src/: GUI_App_Launcher.pyw  GUI_Current_Monitor.py  GUI_Element_Selector.py  GUI_Lattice_Tuner.py  GUI_Orbit_Viewer.py  Makefile  app_launcher_hierarchy.xml  bpmtabledlg.py  buttongroup.py  config.py  corrplot.pyw  elemtuner.py  epicsdatamonitor.py  latman.py  localbump.py  orbit.pyw  orbit_monitor.pyw  perturb_orbit.py  pvtuner.py  resources.qrc
src/num_rec/: Makefile.in  aclocal.m4  configure  configure.in  make.sh
src/num_rec/inc/: nr.h  nrlin.h
src/num_rec/src/: Makefile.am  Makefile.in  amoeba.c  broydn.c  dlubksb.c  dludcmp.c  fmin_.c  newt.c  nrlin.c  nrutil.c  rofunc.c  select1.c  util.c
test/: conf.py  testCorrectOrbit.py  utAllPVs.py  utChanFinder.py  utElement.py  utHla.py  utLattice.py  utOrbit.py  utOrm.py  utTwiss.py  utest.py
tests/: conf.py  sample_beam_current_data.pkl  testInitSpeed.py  testLocalBump.py  test_analysis.py  test_aphla.py  test_bba.py  test_chanfinder.py  test_element.py  test_lattice.py  test_nsls2_bba.py  test_nsls2_lattice.py  test_nsls2_orbit.py  test_nsls2v1.py  test_nsls2v1_bba.py  test_nsls2v1_element.py  test_nsls2v1_lattice.py  test_nsls2v1_orbit.py  test_nsls2v1_twiss.py  test_nsls2v2.py  test_nsls2v3bsrline.py  test_orbit.py  test_orm.py  test_twiss.py  utHla.py  utLifetime.py  utOrbit.py  utest.py
utils/: CD3-Aug15-11-oneCell-norm-Aug19-tracy.lat  CD3-Oct3-12-30Cell-addID-par-singlepass-init.txt  CD3-Oct3-12-30Cell-addID-par-singlepass.csv  CD3-Oct3-12-30Cell-addID-par-singlepass.lat  CD3-Oct3-12-30Cell-addID-par-singlepass.txt  CD3-Oct3-12-30Cell-addID-par.csv  CD3-Sep24-12-30Cell-par.txt  CD3-Sep24-12-30Cell-twiss.txt  LTB-20120724.txt  addCFS_csv.py  bump4cor.py  chanData.py  check.sh  check_cfs.sh  compareChanFinder.py  convertMadOutput.py  dbimport.py  downloadChanFinder.py  dump_pvs.py  fofb_hla_interface.py  import_csv_db.py  initdb.sh  (+20 more)
(+639 files in other folders)
