lib_LIBRARIES = libnum_rec.a

libnum_rec_a_SOURCES = \
  nrlin.c util.c \
  dlubksb.c dludcmp.c \
  addint.c airy.c amebsa.c amoeba.c amotry.c \
  amotsa.c anneal.c anorm2.c arcmak.c arcode.c \
  arcsum.c asolve.c atimes.c avevar.c badluk.c \
  balanc.c banbks.c bandec.c banmul.c bcucof.c \
  bcuint.c beschb.c bessi0.c bessi1.c bessi.c \
  bessik.c bessj0.c bessj1.c bessj.c bessjy.c \
  bessk0.c bessk1.c bessk.c bessy0.c bessy1.c \
  bessy.c beta.c betacf.c betai.c bico.c \
  bksub.c bnldev.c brent.c broydn.c bsstep.c \
  caldat.c chder.c chebev.c chebft.c chebpc.c \
  chint.c chixy.c choldc.c cholsl.c chsone.c \
  chstwo.c cisi.c cntab1.c cntab2.c complex.c \
  convlv.c copy.c correl.c cosft1.c cosft2.c \
  covsrt.c crank.c cyclic.c daub4.c dawson.c \
  dbrent.c ddpoly.c decchk.c df1dim.c dfour1.c \
  dfpmin.c dfridr.c dftcor.c dftint.c difeq.c \
  dlinmin.c dpythag.c drealft.c dsprsax.c dsprstx.c \
  dsvbksb.c dsvdcmp.c eclass.c eclazz.c ei.c \
  eigsrt.c elle.c ellf.c ellpi.c elmhes.c \
  erfcc.c erff.c erffc.c eulsum.c evlmem.c \
  expdev.c expint.c f1dim.c factln.c factrl.c \
  fasper.c fdjac.c fgauss.c fill0.c fit.c \
  fitexy.c fixrts.c fleg.c flmoon.c fmin_.c \
  four1.c fourew.c fourfs.c fourn.c fpoly.c \
  fred2.c fredex.c fredin.c frenel.c frprmn.c \
  ftest.c gamdev.c gammln.c gammp.c gammq.c \
  gasdev.c gaucof.c gauher.c gaujac.c gaulag.c \
  gauleg.c gaussj.c gcf.c golden.c gser.c \
  hpsel.c hpsort.c hqr.c hufapp.c hufdec.c \
  hufenc.c hufmak.c hunt.c hypdrv.c hypgeo.c \
  hypser.c icrc1.c icrc.c igray.c iindexx.c \
  indexx.c interp.c irbit1.c irbit2.c jacobi.c \
  jacobn.c julday.c kendl1.c kendl2.c kermom.c \
  ks2d1s.c ks2d2s.c ksone.c kstwo.c laguer.c \
  lfit.c linbcg.c linmin.c lnsrch.c locate.c \
  lop.c lubksb.c ludcmp.c machar.c \
  matadd.c matsub.c medfit.c memcof.c \
  metrop.c mgfas.c mglin.c midexp.c midinf.c \
  midpnt.c midsql.c midsqu.c miser.c mmid.c \
  mnbrak.c mnewt.c moment.c mp2dfr.c mpdiv.c \
  mpinv.c mpmul.c mpops.c mppi.c mprove.c \
  mpsqrt.c mrqcof.c mrqmin.c newt.c \
  odeint.c orthog.c pade.c pccheb.c pcshft.c \
  pearsn.c period.c piksr2.c piksrt.c pinvs.c \
  plgndr.c poidev.c polcoe.c polcof.c poldiv.c \
  polin2.c polint.c powell.c predic.c probks.c \
  psdes.c pwt.c pwtset.c pythag.c pzextr.c \
  qgaus.c qrdcmp.c qromb.c qromo.c qroot.c \
  qrsolv.c qrupdt.c qsimp.c qtrap.c quad3d.c \
  quadct.c quadmx.c quadvl.c ran0.c ran1.c \
  ran2.c ran3.c ran4.c rank.c ranpt.c \
  ratint.c ratlsq.c ratval.c rc.c rd.c \
  realft.c rebin.c red.c relax2.c relax.c \
  resid.c revcst.c reverse.c rf.c rj.c \
  rk4.c rkck.c rkdumb.c rkqs.c rlft3.c \
  rofunc.c rotate.c rsolv.c rstrct.c \
  rtbis.c rtflsp.c rtnewt.c rtsafe.c rtsec.c \
  rzextr.c savgol.c scrsho.c select1.c selip.c \
  sfroid.c shell.c shoot.c shootf.c simp1.c \
  simp2.c simp3.c simplx.c simpr.c sinft.c \
  slvsm2.c slvsml.c sncndn.c snrm.c sobseq.c \
  solvde.c sor.c sort2.c sort3.c sort.c \
  spctrm.c spear.c sphbes.c sphfpt.c sphoot.c \
  splie2.c splin2.c spline.c splint.c spread.c \
  sprsax.c sprsin.c sprspm.c sprstm.c sprstp.c \
  sprstx.c stifbs.c stiff.c stoerm.c svbksb.c \
  svdcmp.c svdfit.c svdvar.c toeplz.c tptest.c \
  tqli.c trapzd.c tred2.c tridag.c trncst.c \
  trnspt.c ttest.c tutest.c twofft.c vander.c \
  vegas.c voltra.c wt1.c wtn.c wwghts.c \
  zbrac.c zbrak.c zbrent.c zrhqr.c zriddr.c \
  zroots.c

INCLUDES = -I../inc

#CFLAGS = -mcmodel=medium
CFLAGS = -fPIC
